# routes/api.php
@@ -1,12 +1,10 @@
 <?php
 
 use App\Http\Controllers\ExportController;
-use App\Http\Controllers\PostController;
-use App\Http\Resources\PostCollection;
+use App\Http\Controllers\Api\PostController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\UserController;
-use App\Models\Post;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
@@ -22,8 +20,7 @@ Route::get('/products/show/{id}', function () {
 
 Route::get('/users', [UserController::class, 'index']);
 Route::post('/users', [UserController::class, 'store']);
-
-Route::get('/posts', [PostController::class, 'index'])->middleware('auth:sanctum')->name('posts'); //->middleware('auth:basic')
+Route::get('/posts', [PostController::class, 'index'])->name('posts'); //->middleware('auth:basic') middleware('auth:sanctum')
 Route::get('/excel-export-grok', [ExportController::class, 'excelExportGrok'])->name('excel-export-grok');
 Route::get('/excel-export-template', [ExportController::class, 'createUseExcelTemplate'])->name('excel-export-template');
 Route::get('/excel-export-spreadsheet', [ExportController::class, 'createExcelSpreadsheet'])->name('excel-export-spreadsheet');
